add configure carousel to account modal

--- a/Website/index.html
+++ b/Website/index.html
@@ -103,41 +103,44 @@
     <div class="content">
       <div id="featured_slide">
         <ul id="featurednews">
-          <li><img src="images/demo/1.gif" alt="" />
+
+          <li><img src="http://a.espncdn.com/photo/2014/0605/nba_u_saunders_1296x729.jpg" alt="" />
             <div class="panel-overlay">
-              <h2>Article 1 Header</h2>
-              <p>Article 1 description and brief summary goes here. This area can go up to 250 characters.<br />
+              <h2>Flip Saunders to return as coach of Minnesota Timberwolves - ESPN</h2>
+              <p>After interviewing a number of candidates, Minnesota Timberwolves president and part-owner Flip Saunders has decided to coach the team himself, he confirmed to ESPN.com.<br />
                 <a href="#">Continue Reading &raquo;</a></p>
             </div>
           </li>
-          <li><img src="images/demo/2.gif" alt="" />
+          <li><img src="http://i2.cdn.turner.com/cnn/dam/assets/120606121335-d-day-01-story-top.jpg" alt="" />
             <div class="panel-overlay">
-              <h2>Article 2 Header</h2>
-              <p>This is the brief overview/description of the second article.<br />
+              <h2>Opinion: Eisenhower's 'soul-racking' D-Day decision - CNN.com</h2>
+              <p>That year it was a Tuesday.<br />
                 <a href="#">Continue Reading &raquo;</a></p>
             </div>
           </li>
-          <li><img src="images/demo/3.gif" alt="" />
+          <li><img src="http://news.bbcimg.co.uk/media/images/75334000/jpg/_75334027_75324951.jpg" alt="" />
             <div class="panel-overlay">
-              <h2>Article 3 Shows Here</h2>
-              <p>All content on this site is user contributed and user moderated.<br />
+              <h2>BBC News - Leaders await Newark by-election verdict</h2>
+              <p>The UK&#039;s political leaders are anxiously awaiting the verdict of voters in the Newark by-election.<br />
                 <a href="#">Continue Reading &raquo;</a></p>
             </div>
           </li>
-          <li><img src="images/demo/4.gif" alt="" />
+          <li><img src="http://media.nbcdfw.com/images/1200*675/plano+theft+image.jpg" alt="" />
             <div class="panel-overlay">
-              <h2>The Fourth Article's Header</h2>
-              <p>We will need to figure out what exactly goes in each spot but this is a good start.<br />
+              <h2>Plano Police Warn of 'Distract and Grab' Thefts  | NBC 5 Dallas-Fort Worth</h2>
+              <p>Plano Police say they’ve made two arrests in connection to a series of wallet and purse theft cases in their city. Still, they’re warning shoppers to be wary of friendly strangers and to keep personal belongings...<br />
                 <a href="#">Continue Reading &raquo;</a></p>
             </div>
           </li>
-          <li><img src="images/demo/5.gif" alt="" />
+          <li><img src="http://l.yimg.com/bt/api/res/1.2/l3RkpznTk7RssqCHDEPa8Q--/YXBwaWQ9eW5ld3M7cT04NTt3PTYwMA--/http://media.zenfs.com/en-US/video/video.pd2upload.com/video.us.news.yahoo.com@f8943a61-aae0-3ea5-8f57-440aca0f1af9_FULL.png" alt="" />
             <div class="panel-overlay">
-              <h2>The Fifth and Final Article</h2>
-              <p>They say Latin is a dead language but my friend just translated the Harry Potter series.<br />
+              <h2>Gen. Stanley McChrystal on Bowe Bergdahl, Hillary Clinton and his call to national service - Yahoo News</h2>
+              <p>Retired General Stanley McChrystal, in an exclusive interview with Yahoo News, reflects in unusually personal terms on the controversy that cost him his command of the Afghan war and praises Hillary Clinton as “great to work with.”<br />
                 <a href="#">Continue Reading &raquo;</a></p>
             </div>
           </li>
+
+
         </ul>
       </div>
     </div>
@@ -394,6 +397,65 @@
           <input type=file>
         </td>
       </tr>
+
+      <tr>
+      <td colspan=2>
+
+<table>
+  <tr>
+    <td>Headline1</td>
+    <td>Headline2</td>
+    <td>Headline3</td>
+    <td>Headline4</td>
+    <td>Headline5</td>
+  </tr>
+  <tr>
+    <td>
+      <select>
+        <option>CNN</option>
+        <option>BBC</option>
+        <option>ESPN</option>
+      </select>
+    </td>
+
+    <td>
+      <select>
+        <option>CNN</option>
+        <option>BBC</option>
+        <option>ESPN</option>
+      </select>
+    </td>
+
+    <td>
+      <select>
+        <option>CNN</option>
+        <option>BBC</option>
+        <option>ESPN</option>
+      </select>
+    </td>
+
+    <td>
+      <select>
+        <option>CNN</option>
+        <option>BBC</option>
+        <option>ESPN</option>
+      </select>
+    </td>
+
+    <td>
+      <select>
+        <option>CNN</option>
+        <option>BBC</option>
+        <option>ESPN</option>
+      </select>
+    </td>
+  </tr>
+</table>
+
+      </td>
+      </tr>
+
+
       <tr>
         <td colspan=2 align=right>
           <a href="#" onclick="registerUser();">Accept</a>
